# pronto

./: .coveragerc  .gitattributes  .readthedocs.yaml  .travis.yml  CHANGELOG.md  COPYING  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements-doc.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml  update-releases.yml
ci/: requirements.txt
ci/travis/: chandler.sh
docs/: .gitignore  Makefile  requirements.txt
docs/source/: about.rst  api.rst  conf.py  examples.rst  index.rst  install.rst  ontology.rst  owlxml.rst  pronto.rst  todo.rst  updating.rst
docs/source/_static/css/: main.css
docs/source/_static/js/: apitoc.js  custom-icon.js  example-admonition.js
docs/source/_static/json/: switcher.json
docs/source/_templates/: summary.rst
docs/source/api/: index.rst  obo.rst  ontology.rst  owlxml.rst  parser.rst  pronto.Ontology.rst  pronto.Parser.rst  pronto.TermList.rst  pronto.rst  relationship.rst  term.rst  termlist.rst  warnings.rst
docs/source/examples/: index.rst  ms.ipynb
docs/source/guide/: about.rst  index.rst  install.rst  updating.rst
docs/source/guide/examples/: ms.ipynb
example_files/: imagingMS.obo  nmrCV.local.owl  psi-ms.obo
pronto/: __init__.py  definition.py  description.py  entity.py  metadata.py  obo.py  ontology.py  owl.py  parser.py  pv.py  relationship.py  synonym.py  term.py  test.py  utils.py  xref.py
pronto/entity/: __init__.py  attributes.py
pronto/logic/: __init__.py  lineage.py  subclasses.py  superclasses.py
pronto/parser/: __init__.py  base.py  obo.py  owl.py  owlxml.py  utils.py
pronto/parsers/: __init__.py  _fastobo.py  base.py  obo.py  obojson.py  owlxml.py  rdfxml.py  ttl.py
pronto/serializers/: __init__.py  _fastobo.py  base.py  obo.py  obojson.py  ofn.py  owx.py  rdfxml.py
pronto/utils/: impl.py  io.py  iter.py  meta.py  pool.py  repr.py  set.py  warnings.py
tests/: __init__.py  doctests.py  foundrytest.py  requirements.txt  stubs.py  test_def.py  test_doctest.py  test_documentation.py  test_entity.py  test_issues.py  test_obofoundry.py  test_ontology.py  test_parser.py  test_pv.py  test_relationship.py  test_synonym.py  test_synonyms.py  test_term.py  test_utils.py  test_xref.py  unit.py  utils.py
tests/data/: aeo.owl  aeo.ttl  cio.obo  go-basic.owl  go.obo  hp.obo  iao.owl  imagingMS.obo  mp.obo  ms.obo  ms.obo.xz  owen-jones-gen.obo  pato.obo  plana.obo  uo.obo  winni-genp.obo
tests/data/obographs/: abox.json  basic.json  equivNodeSetTest.json  nucleus.json  obsoletion_example.json
tests/resources/: cmo.obo  elo.obo  envo.obo  krassowski.obo  nmrCV.owl  obi-small.owl  owen-jones-gen.obo  psi-ms.obo  uo.obo  uo.owl  winni-genp.obo
tests/resources/imports/: pato.obo  uo.obo
tests/resources/unit/: headerless.obo
tests/test_logic/: test_lineage.py
tests/test_parser/: test_obojson.py  test_owlxml.py  test_rdfxml.py
tests/test_serializer/: base.py  test_obo.py
