[metadata]
name = pronto
version = file: pronto/_version.txt
author = Martin Larralde
author-email = martin.larralde@ens-paris-saclay.fr
home-page = https://github.com/althonos/pronto
description = Python frontend to ontologies
long-description = file: README.rst
license = MIT
license-file = COPYING
platform = any
keywords = bioinformatics, ontology, OBO, OWL, convert, parse
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
project_urls =
    Bug Reports = https://github.com/althonos/pronto/issues
    Changelog = https://pronto.readthedocs.io/en/latest/changes/moclo.html
    Documentation = https://pronto.readthedocs.io/en/latest/

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.6
packages = pronto, pronto.utils
test_suite = tests
setup_requires =
    setuptools
install_requires =
    contexter ~=0.1.4
    fastobo ~=0.5.1
    frozendict ~=1.2
    networkx ~=2.3
    requests ~=2.22

[sdist]
formats = zip

[bdist_wheel]
universal = 1

[coverage:report]
exclude_lines =
   pragma: no cover
   raise NotImplementedError
   if __name__ == .__main__.:
   except ImportError:

[coverage:run]
branch = True
source = pronto

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
inherit = false
ignore = D102,D105,D200,D203,D213,D406,D407
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py

[mypy]
ignore_missing_imports = true

[mypy-pronto.*]
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = false
ignore_missing_imports = false
warn_unused_ignores = false
warn_return_any = false
