[metadata]
name = pronto
version = file: pronto/_version.txt
author = Martin Larralde
author-email = martin.larralde@embl.de
home-page = https://github.com/althonos/pronto
description = Python frontend to ontologies.
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = COPYING
platform = any
keywords = bioinformatics, ontology, OBO, OWL, convert, parse
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
project_urls =
    Bug Tracker = https://github.com/althonos/pronto/issues
    Changelog = https://pronto.readthedocs.io/en/latest/changes.html
    Documentation = https://pronto.readthedocs.io/en/latest/

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.6
packages =
    pronto
    pronto.logic
    pronto.utils
    pronto.parsers
    pronto.serializers
test_suite = tests
setup_requires =
    setuptools
install_requires =
    chardet ~=3.0
    fastobo ~=0.8.2
    immutabledict ~=1.0
    networkx ~=2.3
    python-dateutil ~=2.8

[sdist]
formats = zip

[bdist_wheel]
universal = 1

[coverage:report]
exclude_lines =
   pragma: no cover
   raise NotImplementedError
   if __name__ == .__main__.:
   except ImportError:
   if typing.TYPE_CHECKING:
   @abc.abstractmethod

[coverage:run]
branch = True
source = pronto

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
inherit = false
ignore = D102,D105,D200,D203,D213,D406,D407
match-dir = (?!tests)(?!resources)(?!docs)(?!build)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py

[mypy]
ignore_missing_imports = true

[mypy-pronto.*]
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_subclassing_any = true
disallow_untyped_calls = false
disallow_untyped_defs = false
ignore_missing_imports = false
warn_unused_ignores = false
warn_return_any = false
